--- a/code/Game/Game.vcxproj.filters
+++ b/code/Game/Game.vcxproj.filters
@@ -206,6 +206,21 @@
     <ClCompile Include="Material.cpp">
       <Filter>engine\Render\Renderable</Filter>
     </ClCompile>
+    <ClCompile Include="TestAnims.cpp">
+      <Filter>Other</Filter>
+    </ClCompile>
+    <ClCompile Include="TestModel.cpp">
+      <Filter>Other</Filter>
+    </ClCompile>
+    <ClCompile Include="Test.cpp">
+      <Filter>Other</Filter>
+    </ClCompile>
+    <ClCompile Include="TestPlayer.cpp">
+      <Filter>Other</Filter>
+    </ClCompile>
+    <ClCompile Include="NewStickMan.cpp">
+      <Filter>Other</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="engine">
@@ -560,6 +575,21 @@
     </ClInclude>
     <ClInclude Include="Material.h">
       <Filter>engine\Render\Renderable</Filter>
+    </ClInclude>
+    <ClInclude Include="TestAnims.h">
+      <Filter>Other</Filter>
+    </ClInclude>
+    <ClInclude Include="TestModel.h">
+      <Filter>Other</Filter>
+    </ClInclude>
+    <ClInclude Include="Test.h">
+      <Filter>Other</Filter>
+    </ClInclude>
+    <ClInclude Include="TestPlayer.h">
+      <Filter>Other</Filter>
+    </ClInclude>
+    <ClInclude Include="NewStickMan.h">
+      <Filter>Other</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
