--- a/code/Game/Game.vcxproj
+++ b/code/Game/Game.vcxproj
@@ -177,7 +177,6 @@
     <ClCompile Include="Bloom.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ConverterToNormalMap.cpp" />
-    <ClCompile Include="Cube.cpp" />
     <ClCompile Include="CubeDepthBuffer.cpp" />
     <ClCompile Include="DepthBuffer.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
@@ -226,7 +225,7 @@
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Shadow.cpp" />
     <ClCompile Include="Shape.cpp" />
-    <ClCompile Include="Shape2.cpp" />
+    <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Skybox.cpp" />
     <ClCompile Include="SmoothNoise2D.cpp" />
     <ClCompile Include="SmoothNoise3D.cpp" />
@@ -256,7 +255,6 @@
     <ClInclude Include="Bloom.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ConverterToNormalMap.h" />
-    <ClInclude Include="Cube.h" />
     <ClInclude Include="CubeDepthBuffer.h" />
     <ClInclude Include="DebugNew.h" />
     <ClInclude Include="DepthBuffer.h" />
@@ -312,7 +310,7 @@
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Shadow.h" />
     <ClInclude Include="Shape.h" />
-    <ClInclude Include="Shape2.h" />
+    <ClInclude Include="Geometry.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Skybox.h" />
     <ClInclude Include="SmoothNoise2D.h" />
