--- a/code/Game/Game.vcxproj
+++ b/code/Game/Game.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="CubeDepthBuffer.cpp" />
     <ClCompile Include="DepthBuffer.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="Font2.cpp" />
@@ -259,6 +260,7 @@
     <ClInclude Include="DebugNew.h" />
     <ClInclude Include="DepthBuffer.h" />
     <ClInclude Include="DirectionalLight.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="EngineDescription.h" />
     <ClInclude Include="Font.h" />
