--- a/code/Game/Game.vcxproj
+++ b/code/Game/Game.vcxproj
@@ -177,6 +177,8 @@
     <ClCompile Include="Bloom.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ConverterToNormalMap.cpp" />
+    <ClCompile Include="CoreLogSystem.cpp" />
+    <ClCompile Include="CoreLogThread.cpp" />
     <ClCompile Include="CubeDepthBuffer.cpp" />
     <ClCompile Include="DepthBuffer.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
@@ -256,6 +258,8 @@
     <ClInclude Include="Bloom.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ConverterToNormalMap.h" />
+    <ClInclude Include="CoreLogSystem.h" />
+    <ClInclude Include="CoreLogThread.h" />
     <ClInclude Include="CubeDepthBuffer.h" />
     <ClInclude Include="DebugNew.h" />
     <ClInclude Include="DepthBuffer.h" />
@@ -275,6 +279,7 @@
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Log.h" />
+    <ClInclude Include="LogVerbosity.h" />
     <ClInclude Include="Macros.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
@@ -296,6 +301,7 @@
     <ClInclude Include="PerlinNoise3D.h" />
     <ClInclude Include="PhysicsManager.h" />
     <ClInclude Include="Plane.h" />
+    <ClInclude Include="PlatformLog.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Point2.h" />
     <ClInclude Include="PointLight.h" />
