WIP - буфер вершин

--- a/code/Game/Game.vcxproj
+++ b/code/Game/Game.vcxproj
@@ -190,6 +190,7 @@
     <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="FrameBuffer2.cpp" />
     <ClCompile Include="GameApp.cpp" />
+    <ClCompile Include="GLVertexBuffer.cpp" />
     <ClCompile Include="GLViewport.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Material.cpp" />
@@ -248,6 +249,7 @@
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="VertexBuffer.cpp" />
     <ClCompile Include="Water.cpp" />
     <ClCompile Include="WaterBuffers.cpp" />
     <ClCompile Include="WGLFunc.cpp" />
@@ -274,6 +276,7 @@
     <ClInclude Include="FrameBuffer2.h" />
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="Config.h" />
+    <ClInclude Include="GLVertexBuffer.h" />
     <ClInclude Include="GLViewport.h" />
     <ClInclude Include="InlineFunc.h" />
     <ClInclude Include="Keyboard.h" />
@@ -338,6 +341,7 @@
     <ClInclude Include="Transformation.h" />
     <ClInclude Include="Transformationable.h" />
     <ClInclude Include="Vertex.h" />
+    <ClInclude Include="VertexBuffer.h" />
     <ClInclude Include="Water.h" />
     <ClInclude Include="WaterBuffers.h" />
     <ClInclude Include="WGLFunc.h" />
