--- a/code/Game/Game.vcxproj
+++ b/code/Game/Game.vcxproj
@@ -224,6 +224,7 @@
     <ClCompile Include="Random.cpp" />
     <ClCompile Include="RandomUtils.cpp" />
     <ClCompile Include="RenderBuffer.cpp" />
+    <ClCompile Include="RenderResourceManager.cpp" />
     <ClCompile Include="RenderSystem.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SEMath.cpp" />
@@ -295,6 +296,7 @@
     <ClInclude Include="Config.h" />
     <ClInclude Include="GLViewport.h" />
     <ClInclude Include="InlineFunc.h" />
+    <ClInclude Include="IRenderResource.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Log.h" />
@@ -341,6 +343,7 @@
     <ClInclude Include="Renderable.h" />
     <ClInclude Include="RenderBuffer.h" />
     <ClInclude Include="RenderDescription.h" />
+    <ClInclude Include="RenderResourceManager.h" />
     <ClInclude Include="RenderSystem.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SEMath.h" />
